@@ -1,8 +1,9 @@
 2015-06-29         Arnold D. Robbins     <arnold@skeeve.com>
 
-	* Makefile.am (dbugeval2): New test.
+	* Makefile.am (dbugeval2, typedregex3): New tests.
 	* dbugeval2.awk, dbugeval2.in, dbugeval2.ok: New files.
-	Thanks to Hermann Peifer for the report.
+	* typedregex3.awk, typedregex3.ok: New files.
+	Thanks to Hermann Peifer for the reports.
 
 2015-06-28         Arnold D. Robbins     <arnold@skeeve.com>
 
