@@ -4,6 +4,8 @@
 	a function in a user-defined function body, treat it normally.
 	Makes eval "print and(a, 1)" work in the debugger again.
 	Thanks, yet again, to Hermann Peifer.
+	* interpret.h (r_interpret): Op_subscript. UPREF if the
+	element value is a typed regexp.  Thanks to Hermann Peifer.
 
 2015-06-28         Arnold D. Robbins     <arnold@skeeve.com>
 
